<resources>
    <string name="app_name">Let\'s Meet Here</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="password2_hint">Re-enter password</string>
    <string name="register">Register</string>
    <string name="registerHint">Not yet registered? Create an account here.</string>
    <string name="registerTitle">Register</string>
    <string name="login">Log in</string>
    <string name="logout">Logout</string>
    <string name="loggedIn">Logged in as </string>
    <string name="login_success">Successfully logged in.</string>
    <string name="loginHint">Already have an account? Log in here.</string>
    <string name="loginTitle">Log In</string>
    <string name="blankName">Please enter a name!</string>
    <string name="blankEmail">Please enter an e-mail address!</string>
    <string name="blankPassword">Please enter a password!</string>
    <string name="passwordMismatch">The two password fields do not match!</string>
    <string name="registerSuccess">Registration Successful! Please log in now.</string>
    <string name="newEvent">CREATE NEW EVENT</string>
    <string name="registering">Registering in progress&#8230;</string>
    <string name="uploading">Uploading changes&#8230;</string>
    <string name="uploaded">Changes successfully uploaded.</string>
    <string name="saveOffline">Changes saved locally. Please log in to upload.</string>
    <string name="eventNameHint">Name of event</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="today">Today</string>
    <string name="BAD_SESSION">"Session expired, please log in again."</string>
    <string name="BAD_EMAIL">"Error: server reports unknown user"</string>
    <string name="BAD_PARAMS">"Internal error happened while uploading."</string>
    <string name="BAD_SOMETHING">"Unknown error happened while uploading."</string>
    <string name="synchronizing">Synchronizing data&#8230;</string>
    <string name="editNotAllowed">You may not edit an event created by someone else.</string>
    <string name="invite">Invite</string>
    <string name="inviteText2">(Only contacts with an email set are shown.)</string>
    <string name="inviteText1">Select contact to invite:</string>
    <string name="inviteText3">Or enter an email manually:</string>
    <string name="invited">Invited:</string>
    <string name="invalidEmail">Please enter a valid email</string>
    <string name="sendingInvites">Sending Invites&#8230;</string>
    <string name="inviteSent">Invites sent.</string>
    <string name="emptyInvite">You didn\'t add anyone!</string>
    <string name="inviteNoLogin">Please log in before trying to send invites.</string>
    <string name="wrongOwner">You may only invite people to events created by you.</string>
    <string name="cannotConnect">Cannot connect to server.</string>
    <string name="future">Future Events</string>
    <string name="past">Past Events</string>
    <string name="event">Event</string>
    <string name="comments">Comments</string>
    <string name="description">name:</string>
    <string name="when">when:</string>
    <string name="commentHint">Enter new comment&#8230;</string>
    <string name="sendingComment">Sending comment&#8230;</string>
    <string name="sentComment">Comment sent.</string>
    <string name="sendComment">Send Comment</string>
    <string name="postOffline">You must be logged in to send a comment!</string>

</resources>
