<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gacsoft.letsmeethere.EventViewerActivity">

    <LinearLayout
        android:id="@+id/eventcomments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/eventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_weight="0.5"
            android:enabled="false"
            android:layout_marginRight="1dp"/>
        <Button
            android:id="@+id/commentsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:onClick="onCommentsClicked"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_weight="0.5"
            android:enabled="true"
            android:layout_marginLeft="1dp"/>
    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginRight="10dp"
        android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_Event_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eventNameHint"
            android:singleLine="true"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/when"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/when"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/edit_Event_Date"
            android:layout_width="wrap_content"
            android:editable="false"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:clickable="true"
            android:onClick="dateClicked"/>
        <EditText
            android:id="@+id/edit_Event_Time"
            android:layout_width="wrap_content"
            android:editable="false"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:clickable="true"
            android:onClick="timeClicked"/>
    </LinearLayout>




    <LinearLayout
        android:id="@+id/mapFragment"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/edit_Event_Date"
        >
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:name="com.google.android.gms.maps.MapFragment"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/inviteButton"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invite"
                android:onClick="inviteClicked"
                android:textColor="@color/white"
                android:background="@drawable/button"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:onClick="cancelClicked"
                android:layout_marginRight="1sp"
                android:textColor="@color/white"
                android:background="@drawable/button"/>
            <Button
                android:id="@+id/createButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:onClick="createClicked"
                android:layout_marginLeft="1sp"
                android:textColor="@color/white"
                android:background="@drawable/button"/>
            <Button
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:visibility="invisible"
                android:onClick="editClicked"
                android:textColor="@color/white"
                android:background="@drawable/button"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
