<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gacsoft.letsmeethere.CommentsActivity">

    <LinearLayout
        android:id="@+id/eventcomments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/eventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_weight="0.5"
            android:enabled="true"
            android:onClick="onEventClicked"
            android:layout_marginRight="1dp"/>
        <Button
            android:id="@+id/commentsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_weight="0.5"
            android:enabled="false"
            android:layout_marginLeft="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginRight="10dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_Event_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/eventNameHint"
            android:singleLine="true"
            android:editable="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/when"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/when"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/edit_Event_Date"
            android:layout_width="wrap_content"
            android:editable="false"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/edit_Event_Time"
            android:layout_width="wrap_content"
            android:editable="false"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </LinearLayout>

    <ListView
        android:id="@+id/commentsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:layout_gravity="top|left"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:hint="@string/commentHint"/>
        <Button
            android:id="@+id/postButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendComment"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:onClick="onPostClicked"/>
    </LinearLayout>
</LinearLayout>
