<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gacsoft.letsmeethere.InviteActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inviteText1"
        android:textSize="24sp"/>
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/inviteText2"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/contactlist"
            android:layout_width="fill_parent"
            android:clickable="true"
            android:divider="@android:color/transparent"
            android:dividerHeight="2dp"
            android:layout_height="fill_parent">
    </ListView>
    </LinearLayout>

    <TextView
        android:id="@+id/text3"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inviteText3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:onClick="addClicked"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="0.6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/invitelist"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="1dp"
            >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:onClick="cancelClicked"
            android:layout_marginRight="1sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/invite"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:layout_marginLeft="1sp"
            android:onClick="inviteClicked"/>
    </LinearLayout>

</LinearLayout>
